--- a/styles/style.css
+++ b/styles/style.css
@@ -82,4 +82,31 @@
 }
 .home .hero a {
   color: #fff;
+}
+
+.company {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 200px;
+}
+.company .title {
+  font-family: "Exo", sans-serif;
+  text-align: center;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 72px;
+  font-size: 64px;
+  color: #33348e;
+}
+.company .subtitle {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  width: 1100px;
 }/*# sourceMappingURL=style.css.map */
