--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,7 @@
   margin-left: 190px;
   cursor: pointer;
 }
-.home .hero .left .title {
+.home .hero .left h2 {
   font-family: "Exo", sans-serif;
   font-style: italic;
   font-size: 80px;
@@ -68,13 +68,13 @@
   margin-left: 100px;
   width: 680px;
 }
-.home .hero .left .subtitle {
+.home .hero .left article {
   font-family: "Roboto", sans-serif;
   font-size: 20px;
   line-height: 28px;
   margin-left: 100px;
-  width: 580px;
   opacity: 0.6;
+  width: 580px;
 }
 .home .hero .right li {
   font-family: "Roboto", sans-serif;
@@ -100,7 +100,7 @@
   gap: 20px;
   margin-top: 200px;
 }
-.company .title {
+.company h2 {
   font-family: "Exo", sans-serif;
   text-align: center;
   font-style: normal;
@@ -109,7 +109,7 @@
   font-size: 64px;
   color: #33348e;
 }
-.company .subtitle {
+.company span {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -443,8 +443,8 @@
 .about .about2 {
   text-align: center;
 }
-.about .about1 .title,
-.about .about2 .title {
+.about .about1 h2,
+.about .about2 h2 {
   font-family: "Exo", sans-serif;
   font-style: normal;
   font-weight: 600;
@@ -452,8 +452,8 @@
   line-height: 72px;
   color: #33348e;
 }
-.about .about1 .subtitle,
-.about .about2 .subtitle {
+.about .about1 span,
+.about .about2 span {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
