--- a/styles/style.scss
+++ b/styles/style.scss
@@ -517,84 +517,94 @@ $grey: #b5b4b4;
 }
 
 .products {
-  font-family: "Segoe UI", sans-serif;
-  background-color: #f9f9fb;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-}
-
-.card {
-  display: flex;
-  background: white;
-  border-radius: 20px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-  padding: 40px;
-  gap: 30px;
-  max-width: 900px;
-  align-items: center;
-}
-
-.card img {
-  width: 180px;
-  height: auto;
-}
-
-.details {
-  flex: 1;
-}
-
-.details h2 {
-  font-size: 24px;
-  color: #25227a;
-  margin: 0 0 12px;
-}
-
-.details p {
-  margin: 5px 0;
-  color: #444;
-  font-size: 15px;
-}
-
-.info-icon {
-  margin-right: 5px;
-  color: #5c6bc0;
-}
-
-.product-box {
-  background: #fff;
-  border-radius: 14px;
-  padding: 12px 18px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-  display: flex;
-  align-items: center;
-  margin-top: 15px;
-  font-weight: bold;
-  color: #25227a;
-}
-
-.product-box img {
-  width: 40px;
-  margin-left: 10px;
-}
-
-.button {
-  margin-left: auto;
-  border: 2px solid #d90479;
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #d90479;
-  font-weight: bold;
-  transform: rotate(-10deg);
-  transition: 0.3s ease;
-}
-
-.button:hover {
-  background: #ffe6f2;
-  cursor: pointer;
+  flex-direction: column;
+  margin-top: 100px;
+  .product {
+    margin-top: 50px;
+    margin-bottom: 35px;
+    border: none;
+    border-radius: 50px;
+    background: #fafafb;
+    width: 1480px;
+    height: 450px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 40px;
+    .img {
+      border: 1px solid #e3e3ff;
+      width: 310px;
+      height: 420px;
+      border-radius: 40px;
+    }
+    .text {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      text-align: left;
+      h2 {
+        font-family: "Exo", sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 40px;
+        color: #33348e;
+      }
+      span {
+        font-family: sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 16px;
+        line-height: 20px;
+        color: #7a7bd3;
+        display: flex;
+        align-items: center;
+      }
+      article {
+        font-family: "Roboto", sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 28px;
+        color: #33348e;
+      }
+      .box {
+        width: 320px;
+        height: 160px;
+        margin-top: 80px;
+        border-radius: 30px;
+        border: 1px solid #e3e3ff;
+        cursor: pointer;
+        -webkit-box-shadow: 0px 0px 17px 3px rgba(75, 93, 107, 0.2);
+        -moz-box-shadow: 0px 0px 17px 3px rgba(75, 93, 107, 0.2);
+        box-shadow: 0px 0px 17px 3px rgba(75, 93, 107, 0.2);
+      }
+    }
+    .button{
+      width: 280px;
+      height: 280px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid #e3188b;
+      border-radius: 50%;
+      transform: skew(-10deg);
+      font-family: sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 32px;
+      color: #e3188b;
+      cursor: pointer;
+      &:hover{
+        background: #ffc8e7;
+        transition: 0.4s ease-in-out;
+      }
+    }
+  }
 }
