--- a/styles/style.css
+++ b/styles/style.css
@@ -639,4 +639,72 @@
 .products .product .button:hover {
   background: #ffc8e7;
   transition: 0.4s ease-in-out;
+}
+
+.banner {
+  margin-top: 50px;
+  background: #e3e3ff;
+  width: 1480px;
+  height: 450px;
+  margin-left: 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
+  padding-top: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
+  border-radius: 50px;
+}
+.banner .img {
+  display: flex;
+  align-items: center;
+  height: 420px;
+  border-radius: 40px;
+}
+.banner .img .front {
+  margin-left: -250px;
+}
+.banner .text {
+  margin-left: -200px;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+.banner .text h2 {
+  font-family: "Exo", sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 62px;
+  color: #33348e;
+}
+.banner .text span {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  color: #33348e;
+}
+.banner .button {
+  width: 700px;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #e3188b;
+  border-radius: 50%;
+  transform: skew(-10deg);
+  font-family: sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  color: #e3188b;
+  cursor: pointer;
+}
+.banner .button:hover {
+  background: #ffc8e7;
+  transition: 0.4s ease-in-out;
 }/*# sourceMappingURL=style.css.map */
