--- a/styles/style.scss
+++ b/styles/style.scss
@@ -585,10 +585,10 @@ $grey: #b5b4b4;
         box-shadow: 0px 0px 17px 3px rgba(75, 93, 107, 0.2);
         display: flex;
         justify-content: space-between;
-        .text{
+        .text {
           padding-left: 30px;
           padding-top: 20px;
-          h3{
+          h3 {
             font-family: "Roboto", sans-serif;
             font-weight: 600;
             font-size: 20px;
@@ -596,7 +596,7 @@ $grey: #b5b4b4;
             color: #33348e;
             margin-bottom: 50px;
           }
-          a{
+          a {
             font-family: sans-serif;
             font-weight: 600;
             font-size: 16px;
@@ -604,17 +604,17 @@ $grey: #b5b4b4;
             color: #e3188b;
           }
         }
-        .image{
-            width: 100px;
-            height: 140px;
-            border: 1px solid #e3e3ff;
-            border-radius: 20px;
-            margin-right: 10px;
-            margin-top: 8px;
-          }
+        .image {
+          width: 100px;
+          height: 140px;
+          border: 1px solid #e3e3ff;
+          border-radius: 20px;
+          margin-right: 10px;
+          margin-top: 8px;
+        }
       }
     }
-    .button{
+    .button {
       width: 280px;
       height: 280px;
       display: flex;
@@ -630,10 +630,80 @@ $grey: #b5b4b4;
       line-height: 32px;
       color: #e3188b;
       cursor: pointer;
-      &:hover{
+      &:hover {
         background: #ffc8e7;
         transition: 0.4s ease-in-out;
       }
+    }
+  }
+}
+
+.banner {
+  margin-top: 50px;
+  background: #e3e3ff;
+  width: 1480px;
+  height: 450px;
+  margin-left: 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
+  padding-top: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
+  border-radius: 50px;
+  .img {
+    // border: 1px solid #fff;
+    display: flex;
+    align-items: center;
+    // justify-content: space-between;
+    height: 420px;
+    border-radius: 40px;
+    .front {
+      margin-left: -250px;
+    }
+  }
+  .text{
+    margin-left: -200px;
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    h2{
+      font-family: "Exo", sans-serif;
+      font-style: italic;
+      font-weight: 700;
+      font-size: 48px;
+      line-height: 62px;
+      color: #33348e;
+    }
+    span{
+      font-family: "Inter", sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 28px;
+      color: #33348e;
+    }
+  }
+  .button {
+    width: 700px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #e3188b;
+    border-radius: 50%;
+    transform: skew(-10deg);
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    color: #e3188b;
+    cursor: pointer;
+    &:hover {
+      background: #ffc8e7;
+      transition: 0.4s ease-in-out;
     }
   }
 }
