--- a/styles/style.css
+++ b/styles/style.css
@@ -788,4 +788,93 @@
   line-height: 28px;
   color: #5d5d5f;
   padding-left: 20px;
+}
+
+.contact {
+  margin-top: 50px;
+  margin-left: 100px;
+}
+.contact h2 {
+  font-family: "Exo", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 64px;
+  line-height: 72px;
+  color: #33348e;
+  text-align: center;
+}
+.contact .container {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  border-radius: 0;
+  color: #000;
+}
+.contact .container .text ul {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-bottom: 50px;
+}
+.contact .container .text ul li {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 28px;
+  color: #000;
+}
+.contact .container .text form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.contact .container .text form h3 {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 32px;
+  color: #33348e;
+}
+.contact .container .text form .inputs {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.contact .container .text form .inputs input {
+  padding: 10px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  color: #33348e;
+  border: 1px solid #e3e3ff;
+  outline: none;
+  border-radius: 15px;
+  width: 270px;
+}
+.contact .container .text form a {
+  font-family: sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #fff;
+  background: #e3188b;
+  padding: 10px;
+  border: 0;
+  border-radius: 15px;
+  cursor: pointer;
+  margin-bottom: 50px;
+}
+.contact .container .map {
+  margin-left: 200px;
+}
+.contact .container .map iframe {
+  border-radius: 20px;
 }/*# sourceMappingURL=style.css.map */
