--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,11 @@
+// Import partials
 @import "variables";
-@import "mixins";
 @import "base";
 @import "header";
-@import "hero";
+@import "home";
 @import "about";
 @import "products";
 @import "news";
 @import "contact";
 @import "footer";
-@import "theme";
+@import "responsive";
